@@ -3,15 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'maven-publish'
 apply from: '../jacoco.gradle'
 
-version = '1.1.0'
+version = '1.1.1'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
 
         buildConfigField 'String', 'TAG', "\"Tealium-HostedDataLayer-$version\""
         buildConfigField 'String', 'LIBRARY_VERSION', "\"$version\""
@@ -45,6 +45,11 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            all {
+                jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+                jvmArgs("--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
+                jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
+            }
         }
     }
 }
